@@ -38,6 +38,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #27030: Unknown escapes consisting of ``'\'`` and ASCII letter in
+  regular expressions now are errors.
+
 - Issue #27186: Add os.PathLike support to DirEntry (part of PEP 519).
   Initial patch by Jelle Zijlstra.
 
